--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,24 +3,24 @@ version: '2'
 services:
   app:
     image: nicbet/phoenix:1.5.7
-    build:
-      context: ..
-      dockerfile: Dockerfile
-    command: sleep infinity
+    build: .
     ports:
       - "4000:4000"
     volumes:
-      # Mounts the project folder to '/workspace'. The target path inside the container
-      # should match should match what your application expects. In this case, the
-      # compose file is in a sub-folder, so we will mount '..'. We'll then reference this
-      # as the workspaceFolder in '.devcontainer/devcontainer.json' so VS Code starts here.
-      - ..:/app
-
-      # This lets you avoid setting up Git again in the container
-      - ~/.gitconfig:/root/.gitconfig
+      - ./src:/app
+      - node_modules:/app/assets/node_modules
     depends_on:
       - db
   db:
-    image: postgres:10
+    image: mdillon/postgis:9.6
+    restart: always
+    environment:
+      POSTGRES_USER: test
+      POSTGRES_PASSWORD: test
     volumes:
-      - /var/lib/postgresql/data
+      - es_postgres:/var/lib/postgresql/data
+volumes:
+  es_postgres:
+    driver: "local"
+  node_modules:
+    driver: "local"
