--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,19 @@ services:
       - "4000:4000"
     volumes:
       - ./src:/app
+      - node_modules:/app/assets/node_modules
     depends_on:
       - db
   db:
-    image: postgres:10
+    image: mdillon/postgis:9.6
+    restart: always
+    environment:
+      POSTGRES_USER: test
+      POSTGRES_PASSWORD: test
+    volumes:
+      - es_postgres:/var/lib/postgresql/data
+volumes:
+  es_postgres:
+    driver: "local"
+  node_modules:
+    driver: "local"
