--- a/src/assets/package.json
+++ b/src/assets/package.json
@@ -7,8 +7,12 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
