--- a/src/assets/package.json
+++ b/src/assets/package.json
@@ -12,6 +12,7 @@
     "phoenix_html": "file:../deps/phoenix_html",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
+    "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
