--- a/src/assets/package.json
+++ b/src/assets/package.json
@@ -32,6 +32,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "regenerator-runtime": "^0.13.7",
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.2",
     "vue-jest": "^3.0.7",
